--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <p>适用性上，除宋体、黑体，该工具在正文用楷体、仿宋也可以取得不错的效果。对个别字而言，第二中心线的预测结果会明显失效，因为这些字背后有不浅的习惯因素。例如“仁”，“二”要写得扁宽一些，不得不占据理论上所不应该占据的大空间。或如“町”，从“丁”的字都会释放出一块便于识别的内白。但有趣的是，现代圆体的划时代之作，Naru（日：ナール），其“町”字造型，经测量就几乎完美契合第二中心线规律，格外挤压了“丁”的占据空间，不仅相较于中文字体、相较于其他日文字体，Naru在“町”字的处理也更为夸张、几何化（感谢韩泳思发现了这点）。从这些例子看，第二中心线在活字字形个性的维度上，存有相当的便宜空间。</p>
       <p>总地来说，第二中心线的实际适用范围和效果较我们原本预期要好得多。能够将这样一种规律建模出来，不得不让人佩服上海老一辈设计师敏锐的直觉。</p>
       <h5>联系方式</h5>
-      <p>如果您有任何想法、问题、心得，都很欢迎和我们交流，我们很期待可以获得反馈。欢迎访问我们<a href="http://www.next.zju.edu.cn/">实验室的主页</a>，也欢迎联系作者：celestialphineas [AT] outlook [DOT] com</p>
+      <p>如果您有任何想法、建议、问题、心得，都很欢迎和我们交流，我们很期待可以获得反馈。欢迎访问我们<a href="http://www.next.zju.edu.cn/">实验室的主页</a>，也欢迎联系作者：celestialphineas [AT] outlook [DOT] com</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">好</a>
