Line color change

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 .component-bound {
   position: absolute;
   z-index: -1;
-  outline: 1px #cccccc dotted;
+  outline: 1px #aaaaaa dotted;
 }
 
 #h-axes {
